--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ body, html {
     padding: 0;
     font-family: 'Arial', sans-serif;
     height: 100%;
-    background-color: #8B0000; /* Dark crimson */
+    overflow: hidden;
+    background-color: #8B0000; /* Darker crimson */
     color: white;
 }
 a { text-decoration: none; color: inherit; }
@@ -22,6 +23,7 @@ a { text-decoration: none; color: inherit; }
     align-items: center;
     height: 100vh;
     text-align: center;
+    position: relative;
 }
 
 #intro h1 {
@@ -33,6 +35,12 @@ a { text-decoration: none; color: inherit; }
 #intro p {
     font-size: 1.2rem;
     margin-bottom: 30px;
+}
+
+.btn-container {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
 }
 
 .btn {
@@ -48,17 +56,19 @@ a { text-decoration: none; color: inherit; }
 
 .btn:hover {
     background-color: #B22222;
+    color: white;
     transform: scale(1.05);
 }
 
-#works {
+#works, #about {
     display: none;
     padding: 50px;
     max-width: 900px;
     margin: auto;
+    overflow: hidden;
 }
 
-#works h2 {
+#works h2, #about h2 {
     text-align: center;
     margin-bottom: 40px;
     font-size: 2rem;
@@ -110,6 +120,50 @@ a { text-decoration: none; color: inherit; }
     background-color: #FF0000;
     transform: scale(1.05);
 }
+
+/* About Section */
+.about-container {
+    text-align: center;
+    color: white;
+}
+
+.about-container img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 20px;
+    border: 4px solid white;
+}
+
+.about-container p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    max-width: 700px;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.social-buttons {
+    margin-top: 20px;
+}
+
+.social-buttons a {
+    display: inline-block;
+    margin: 8px;
+    padding: 10px 18px;
+    background-color: white;
+    color: #8B0000;
+    border-radius: 10px;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.social-buttons a:hover {
+    background-color: #B22222;
+    color: white;
+    transform: scale(1.05);
+}
 </style>
 </head>
 <body>
@@ -117,7 +171,10 @@ a { text-decoration: none; color: inherit; }
 <div id="intro">
     <h1>Welcome to My Portfolio</h1>
     <p>Check out all the websites and projects I've created.</p>
-    <button class="btn" onclick="showWorks()">View My Works</button>
+    <div class="btn-container">
+        <button class="btn" onclick="showWorks()">View My Works</button>
+        <button class="btn" onclick="showAbout()">About the Developer</button>
+    </div>
 </div>
 
 <div id="works">
@@ -129,17 +186,48 @@ a { text-decoration: none; color: inherit; }
         <a href="https://sbrlei02.github.io/Live-Code-Share/" target="_blank">Visit Project</a>
     </div>
 
+    <div class="project">
+        <h3>History of the Computer</h3>
+        <p>Published: 2025-08-23</p>
+        <a href="https://sbrlei02.github.io/History-of-Computers/" target="_blank">Visit Project</a>
+    </div>
+
+    <button class="back-btn" onclick="backToIntro()">Back to Intro</button>
+</div>
+
+<div id="about">
+    <h2>About the Developer</h2>
+    <div class="about-container">
+        <img src="https://scontent.fmnl33-1.fna.fbcdn.net/v/t39.30808-6/538170270_843339668074898_2442000477605967386_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeG2FabTmCVrfaTPXxkkSvmw3tVZEUJyhzre1VkRQnKHOhf_Xy0cJjZGl94izVXvcRdSncFImMfM-4g3cAW9zPKQ&_nc_ohc=H69fSPdh8XUQ7kNvwFisJ4y&_nc_oc=Adlu3-PmRoZNNfUnfz_ONvaZbilcEKy841sTFu_3Wq9zQboRbz0PAQVw0_yGbgiE2Go&_nc_zt=23&_nc_ht=scontent.fmnl33-1.fna&_nc_gid=5zrWQfjl5Bh_wnsV7kgUbw&oh=00_AfUoAYwJuEEuYlX1F0YA4dzE_4Nc3aNQEa51frUDPtvL1A&oe=68AF46A2" alt="Profile Picture">
+        <p>Hello! I am <b>Sabrea Lei S. Agustin</b>, an aspiring developer and a student of Information Technology. Alongside my passion for coding and creating websites, I am also a digital artist and animator who loves bringing ideas to life through art. I offer art commissions where I combine creativity and technical skills to produce unique and engaging works.</p>
+        
+        <div class="social-buttons">
+            <a href="https://instagram.com/sbr_lei" target="_blank">Instagram (Main)</a>
+            <a href="https://instagram.com/yandrea_kateee" target="_blank">Instagram (Art)</a>
+            <a href="https://web.facebook.com/sabrea.lei/about" target="_blank">Facebook (Main)</a>
+            <a href="https://web.facebook.com/yandreakate.yt" target="_blank">Facebook (Art)</a>
+            <a href="https://youtube.com/@yandrea_kateee?si=AqGxuGSpp5QGUkXU" target="_blank">YouTube Channel</a>
+        </div>
+    </div>
     <button class="back-btn" onclick="backToIntro()">Back to Intro</button>
 </div>
 
 <script>
 function showWorks() {
     document.getElementById('intro').style.display = 'none';
+    document.getElementById('about').style.display = 'none';
     document.getElementById('works').style.display = 'block';
+}
+
+function showAbout() {
+    document.getElementById('intro').style.display = 'none';
+    document.getElementById('works').style.display = 'none';
+    document.getElementById('about').style.display = 'block';
 }
 
 function backToIntro() {
     document.getElementById('works').style.display = 'none';
+    document.getElementById('about').style.display = 'none';
     document.getElementById('intro').style.display = 'flex';
 }
 </script>
