--- a/index.html
+++ b/index.html
@@ -10,20 +10,27 @@ body, html {
     padding: 0;
     font-family: 'Arial', sans-serif;
     height: 100%;
-    overflow: hidden;
     background-color: #8B0000; /* Darker crimson */
     color: white;
 }
+
 a { text-decoration: none; color: inherit; }
 
-#intro {
+.section {
+    display: none;
+    min-height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     text-align: center;
-    position: relative;
+    padding: 30px;
+    box-sizing: border-box;
+}
+
+#intro {
+    display: flex; /* Default visible */
 }
 
 #intro h1 {
@@ -60,19 +67,9 @@ a { text-decoration: none; color: inherit; }
     transform: scale(1.05);
 }
 
-#works, #about {
-    display: none;
-    padding: 50px;
-    max-width: 900px;
-    margin: auto;
-    overflow: hidden;
-}
-
-#works h2, #about h2 {
-    text-align: center;
-    margin-bottom: 40px;
+h2 {
+    margin-bottom: 30px;
     font-size: 2rem;
-    color: white;
 }
 
 .project {
@@ -82,6 +79,9 @@ a { text-decoration: none; color: inherit; }
     border-radius: 12px;
     color: #333;
     transition: transform 0.3s, box-shadow 0.3s;
+    width: 100%;
+    max-width: 500px;
+    text-align: left;
 }
 
 .project:hover {
@@ -94,18 +94,13 @@ a { text-decoration: none; color: inherit; }
     color: #B22222;
 }
 
-.project p {
-    margin: 0 0 10px 0;
-}
-
 .project a {
     color: #8B0000;
     font-weight: bold;
 }
 
 .back-btn {
-    display: block;
-    margin: 30px auto 0 auto;
+    margin-top: 20px;
     padding: 10px 20px;
     background-color: #B22222;
     color: white;
@@ -124,7 +119,7 @@ a { text-decoration: none; color: inherit; }
 /* About Section */
 .about-container {
     text-align: center;
-    color: white;
+    max-width: 700px;
 }
 
 .about-container img {
@@ -139,8 +134,6 @@ a { text-decoration: none; color: inherit; }
 .about-container p {
     font-size: 1.1rem;
     line-height: 1.6;
-    max-width: 700px;
-    margin: auto;
     margin-bottom: 20px;
 }
 
@@ -168,7 +161,7 @@ a { text-decoration: none; color: inherit; }
 </head>
 <body>
 
-<div id="intro">
+<div id="intro" class="section">
     <h1>Welcome to My Portfolio</h1>
     <p>Check out all the websites and projects I've created.</p>
     <div class="btn-container">
@@ -177,7 +170,7 @@ a { text-decoration: none; color: inherit; }
     </div>
 </div>
 
-<div id="works">
+<div id="works" class="section">
     <h2>My Projects</h2>
 
     <div class="project">
@@ -195,7 +188,7 @@ a { text-decoration: none; color: inherit; }
     <button class="back-btn" onclick="backToIntro()">Back to Intro</button>
 </div>
 
-<div id="about">
+<div id="about" class="section">
     <h2>About the Developer</h2>
     <div class="about-container">
         <img src="https://scontent.fmnl33-1.fna.fbcdn.net/v/t39.30808-6/538170270_843339668074898_2442000477605967386_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeG2FabTmCVrfaTPXxkkSvmw3tVZEUJyhzre1VkRQnKHOhf_Xy0cJjZGl94izVXvcRdSncFImMfM-4g3cAW9zPKQ&_nc_ohc=H69fSPdh8XUQ7kNvwFisJ4y&_nc_oc=Adlu3-PmRoZNNfUnfz_ONvaZbilcEKy841sTFu_3Wq9zQboRbz0PAQVw0_yGbgiE2Go&_nc_zt=23&_nc_ht=scontent.fmnl33-1.fna&_nc_gid=5zrWQfjl5Bh_wnsV7kgUbw&oh=00_AfUoAYwJuEEuYlX1F0YA4dzE_4Nc3aNQEa51frUDPtvL1A&oe=68AF46A2" alt="Profile Picture">
@@ -216,13 +209,13 @@ a { text-decoration: none; color: inherit; }
 function showWorks() {
     document.getElementById('intro').style.display = 'none';
     document.getElementById('about').style.display = 'none';
-    document.getElementById('works').style.display = 'block';
+    document.getElementById('works').style.display = 'flex';
 }
 
 function showAbout() {
     document.getElementById('intro').style.display = 'none';
     document.getElementById('works').style.display = 'none';
-    document.getElementById('about').style.display = 'block';
+    document.getElementById('about').style.display = 'flex';
 }
 
 function backToIntro() {
