--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@ h2 {
         <a href="https://sbrlei02.github.io/History-of-Computers/" target="_blank">Visit Project</a>
     </div>
 
+     <div class="project">
+        <h3>SafeTalk</h3>
+        <p>Published: 2025-08-24</p>
+        <a href="https://sbrlei02.github.io/SafeTalka" target="_blank">Visit Project</a>
+    </div>
+
     <button class="back-btn" onclick="backToIntro()">Back to Intro</button>
 </div>
 
