--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ h2 {
      <div class="project">
         <h3>SafeTalk</h3>
         <p>Published: 2025-08-24</p>
-        <a href="https://sbrlei02.github.io/SafeTalka" target="_blank">Visit Project</a>
+        <a href="https://sbrlei02.github.io/SafeTalk" target="_blank">Visit Project</a>
     </div>
 
     <button class="back-btn" onclick="backToIntro()">Back to Intro</button>
