--- a/index.html
+++ b/index.html
@@ -183,12 +183,17 @@ h2 {
         <h3>History of the Computer</h3>
         <p>Published: 2025-08-23</p>
         <a href="https://sbrlei02.github.io/History-of-Computers/" target="_blank">Visit Project</a>
-    </div>
 
      <div class="project">
         <h3>SafeTalk</h3>
         <p>Published: 2025-08-24</p>
-        <a href="https://sbrlei02.github.io/SafeTalk" target="_blank">Visit Project</a>
+        <a href="https://sbrlei02.github.io/SafeTalka" target="_blank">Visit Project</a>
+
+    <div class="project">
+        <h3>Fortune</h3>
+        <p>Published: 2025-08-28</p>
+        <a href=" https://sbrlei02.github.io/Fortune/" target="_blank">Visit Project</a>
+
     </div>
 
     <button class="back-btn" onclick="backToIntro()">Back to Intro</button>
